--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nomflix",
+  "name": "react-master-final",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -50,6 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://jeonghun94.github.io/nomflix"
+  }
 }
